--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
   "version": "1.0.0-alpha01",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "concert.js": "^1.0.3",
+    "papaparse": "^5.1.1",
+    "vue": "^2.6.11"
   }
 }
