--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   },
   "devDependencies": {
     "concert.js": "^1.0.3",
+    "grunt": "^1.1.0",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-eslint": "^22.0.0",
+    "grunt-terser": "^1.0.0",
     "papaparse": "^5.1.1",
     "vue": "^2.6.11"
   }
