--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "covidbycounty",
-  "description": "",
+  "description": "Covid-19 Data Analysis by  County",
   "author": "Trajan McGill <code@trajanmcgill.com>",
   "license": "MIT",
   "version": "1.0.0-alpha01",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/trajanmcgill/CovidByCounty.git"
+  },
+  "bugs": "https://github.com/trajanmcgill/CovidByCounty/issues",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
