--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "chart.js": "^2.9.3",
     "concert.js": "^1.0.3",
     "grunt": "^1.1.0",
     "grunt-cli": "^1.3.2",
